# optox

./: .gitignore  CMakeLists.txt  README.md  environment.yml  requirements.txt  settings.cmake
cmake/: compiler_settings.cmake  macros.cmake
matlab/: CMakeLists.txt  mex_add_operator.cpp  mex_add_operator_adjoint.cpp  mex_nabla3_operator.cpp  mex_nabla3_operator_adjoint.cpp  mex_nabla_operator.cpp  mex_nabla_operator_adjoint.cpp  mex_utils.h  mexaddoperator.cpp
python/: CMakeLists.txt  py_act_operator.cpp  py_add_operator.cpp  py_nabla_operator.cpp  py_operator.h  py_pad_operator.cpp  py_utils.h  py_warp_operator.cpp  pyaddoperator.cpp  setup.py.in
python/optopy/: __init__.py  nabla.py  nabla2.py  pad.py  warp.py
python/package/: LICENSE  README.md  build_pkg.sh  setup.py
python/package/optopy/: __init__.py
python/package/optopy/nabla/: __init__.py
pytorch/: CMakeLists.txt  setup.py.in  th_act_operator.cpp  th_demosaicing_operator.cpp  th_nabla_operator.cpp  th_pad2d_operator.cpp  th_pad3d_operator.cpp  th_pad_operator.cpp  th_rot_operator.cpp  th_utils.h  th_warp_operator.cpp
pytorch/optoth/: __init__.py  demosaicing.py  nabla.py  nabla2.py  pad.py  pad2d.py  pad3d.py  rot.py  warp.py
pytorch/optoth/activations/: __init__.py  act.py
src/: CMakeLists.txt  cutils.h  optox_api.h  optox_math.h  optoxmath.h  reduce.cuh  typetraits.h  utils.h
src/operators/: add_operator.cu  add_operator.h  addoperator.cpp  addoperator.cu  addoperator.h  demosaicing_operator.cu  demosaicing_operator.h  ioperator.h  nabla2_operator.cu  nabla2_operator.h  nabla_operator.cu  nabla_operator.h  pad2d_operator.cu  pad2d_operator.h  pad3d_operator.cu  pad3d_operator.h  pad_operator.cu  pad_operator.h  rot_operator.cu  rot_operator.h  warp_operator.cu  warp_operator.h
src/operators/activations/: act.cu  act.h  act_linear.cu  act_linear.h  act_rbf.cu  act_rbf.h  act_spline.cu  act_spline.h  utils.cuh
src/tensor/: d_tensor.h  h_tensor.h  shape.h  tensor.h
tensorflow/: CMakeLists.txt  setup.py.in  tf_activations.cpp  tf_activations.cu  tf_activations.h  tf_activations_operator.cpp  tf_add_operator.cpp  tf_add_operator.cu  tf_add_operator.h  tf_cuutils.cuh  tf_demosaicing.cpp  tf_demosaicing.cu  tf_demosaicing.h  tf_demosaicing_operator.cpp  tf_fftutils.cpp  tf_fftutils.cu  tf_filters.cpp  tf_filters.cu  tf_filters.h  tf_gpu_nufft_operator.cpp  tf_gpu_nufft_operator.cu  tf_gpu_nufft_operator.h  tf_metamorphosis.cpp  tf_metamorphosis.cu  tf_metamorphosis.h  tf_nabla_operator.cpp  tf_nabla_operator.cu  tf_nabla_operator.h  tf_pad2d_operator.cpp  tf_pad3d_operator.cpp  tf_pad_operator.cpp  tf_utils.h  tf_warp_operator.cpp  tfaddoperator.cpp  tfaddoperator.cu  tfaddoperator.h
tensorflow/mapcoordinates/: .gitignore  Mapcoordinates_Mini_Example.py  Mapcoordinates__GradientCheck.py  mapcoordinates.cc  mapcoordinates.cu  mapcoordinates.h  mapcoordinates.py  mapcoordinates_test_local.py
tensorflow/medianfilter/: median_filter_4D.cc  median_filter_4D.cu  median_filter_4D.h  median_filter_4D_test_local.py
tensorflow/optotf/activations/: __init__.py
tensorflow/optotf/demosaicing/: __init__.py
tensorflow/optotf/keras/: activations.py  nabla.py  pad.py  warp.py
tensorflow/optotf/nabla/: __init__.py
tensorflow/optotf/pad/: __init__.py
tensorflow/optotf/pad2d/: __init__.py
tensorflow/optotf/pad3d/: __init__.py
tensorflow/optotf/warp/: __init__.py
tensorflow/package/: README.md  build_pkg.sh  setup.py
tensorflow/package/optotf/: __init__.py
tensorflow/package/optotf/activations/: __init__.py
tensorflow/package/optotf/demosaicing/: __init__.py
tensorflow/package/optotf/fft/: __init__.py
tensorflow/package/optotf/interpolation/: __init__.py
tensorflow/package/optotf/mapcoordinates/: __init__.py
tensorflow/package/optotf/medianfilter/: __init__.py
tensorflow/package/optotf/pad2d/: __init__.py
tensorflow/package/optotf/warpimage/: __init__.py
tensorflow/pad2d/: pad2d.cc  pad2d.cu  pad2d.h  pad2d_test_local.py
tensorflow/warpimage/: atomicAddFloat64.h  warpimage.cc  warpimage.cu  warpimage.h  warpimage.py  warpimage_Mini_Example.py  warpimage__GradientCheck.py  warpimage_test_local.py
test/matlab/: test_add_operator.m  test_nabla_operator.m
test/python/: test.py  test_act_operator.py  test_add_operator.py  test_nabla_operator.py
test/pytorch/: test_act.py  test_rot.py
test/tensorflow/: test_tf_act.py  test_tf_act_gradientcheck.py  test_tf_addop.py  test_tf_addoperator.py  test_tf_demosaicing.py  test_tf_gpunufft.py  test_tf_nabla.py  timeline_01.json
